fix UI bugs - resize and overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,9 +23,12 @@
   padding: 1rem;
 }
 .main-screen {
-  max-width: 84rem;
+  max-width: 90rem;
   text-align: center;
   display: block;
+  height: 100px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 img {
   vertical-align: middle;
@@ -51,15 +54,26 @@ label {
 .header {
   position: relative;
   top: 0rem;
-  height: 10hv;
+  height: 20hv;
   text-align: left;
   background-color: #f6f6f6;
 }
 .search-wrapper{
-  text-align: center;
-  width: 30%;
+  display:flex;
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
+}
+@media only screen and (min-width: 768px) {
+  .search-wrapper{
+    width: 40%;
+    margin-left: 45%;
+  }
+  .pet-logo {
+    position: absolute;
+    right: 5rem;
+    bottom: 1rem;
+  }
 }
 .main-screen{
   height: 80vh;
@@ -75,12 +89,10 @@ label {
   height:22rem;
   object-fit:contain;
 }
-.pet-logo{
-  position: absolute;
-  right: 5rem;
-  bottom: 1rem;
-}
+
+
 .contact{
+  text-align: center;
   display: block;
   width: 30rem;
   color:blueviolet;
